--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Game2Start
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Victorian_House/Maps/Day_Map.Day_Map
+GameDefaultMap=/Game/Victorian_House/Maps/Day_Map.Day_Map
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Victorian_House/Blueprints/BP_VictorianGameMode.BP_VictorianGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
