--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
-Plugins/FMODStudio/Binaries/*
+Plugins/FMODStudio/*
 
 # Builds
 Build/*
