Added main menu and pause menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Game2Start
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Victorian_House/Maps/Day_Map.Day_Map
-GameDefaultMap=/Game/Victorian_House/Maps/Day_Map.Day_Map
+GameDefaultMap=/Game/ThirdPerson/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
